syntax = "proto3";
package user_service.api;
option go_package = "../api";

// ---------------------------------------------------------------------------------------

import "library/envoyproxy/validate/validate.proto";

message RegisterUserRequest {
  string employee_id = 1 [(validate.rules).string = {min_len:1, max_len:50}];
  string name = 2 [(validate.rules).string = {min_len:1, max_len:255}];
  string password = 3 [(validate.rules).string = {min_len:8, max_len:255}];
  string email = 4;
  UserRole role = 5;
  string position = 6;
  string department = 7;
  string gender = 8;
  string address = 9;
  string phone = 10;
}

enum UserRole {
  OTHER = 0;
  STAFF = 1;
  MANAGER = 2;
  HR = 3;
}

message RegisterUserResponse {
  int64 code = 1;
  string message = 2;
  UserToken data = 3;
}

message UserToken {
  int64 user_id = 1;
  string token = 2;
  int64 expired_at = 3;
}

message AuthorizeUserRequest {
  string employee_id = 1 [(validate.rules).string = {min_len:1, max_len:50}];
  string email = 2 [(validate.rules).string = {min_len:1, max_len:255}];
  string password = 3 [(validate.rules).string = {min_len:8, max_len:255}];
}

message AuthorizeUserResponse {
  int64 code = 1;
  string message = 2;
  UserToken data = 3;
}